[tool.poetry]
name = "arcframework"
version = "0.1.0"
description = ""
authors = ["AbooMinister25 <aboominister@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
coverage = "^6.2"
httpx = "^0.21.1"
trio = "^0.19.0"
orjson = "^3.6.5"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b1"
flake8 = "^4.0.1"
isort = "^5.10.1"
taskipy = "^1.9.0"
pytest-anyio = "^0.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "poetry run black arc tests && poetry run isort arc tests"
lint = "poetry run flake8 arc"
test = "poetry run pytest"
coverage = "poetry run coverage run -m pytest"